Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4833

Crash in Http2ConnectionState::send_a_data_frame

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Critical
    • Resolution: Fixed
    • None
    • 7.0.0
    • HTTP/2

    Description

      I'm moving this away from TS-4541, since we now suspect these might not be related.

      My trace is

      (gdb) bt
      #0  Http2ConnectionState::send_a_data_frame (this=this@entry=0x238, stream=stream@entry=0x2ae514423b00, payload_length=@0x2aaab3e04988: 0)
          at Http2ConnectionState.cc:1029
      #1  0x00002aaaaacf8d67 in Http2ConnectionState::send_data_frames (this=0x238, stream=0x2ae514423b00) at Http2ConnectionState.cc:1104
      #2  0x00002aaaaacff695 in Http2Stream::send_response_body (this=<optimized out>) at Http2Stream.cc:543
      #3  0x00002aaaaacf3ff2 in Http2ConnectionState::restart_streams (this=0x2ab803790288) at Http2ConnectionState.cc:914
      #4  rcv_window_update_frame (cstate=..., frame=...) at Http2ConnectionState.cc:627
      #5  0x00002aaaaacf9718 in Http2ConnectionState::main_event_handler (this=0x2ab803790288, event=<optimized out>, edata=<optimized out>)
          at Http2ConnectionState.cc:823
      #6  0x00002aaaaacef1b3 in Continuation::handleEvent (data=0x2aaab3e04ab0, event=2253, this=0x2ab803790288)
          at ../../iocore/eventsystem/I_Continuation.h:153
      #7  send_connection_event (cont=cont@entry=0x2ab803790288, event=event@entry=2253, edata=edata@entry=0x2aaab3e04ab0) at Http2ClientSession.cc:58
      #8  0x00002aaaaacef452 in Http2ClientSession::state_complete_frame_read (this=0x2ab803790050, event=<optimized out>, edata=0x2aaaf549b718)
          at Http2ClientSession.cc:426
      #9  0x00002aaaaacf0972 in Continuation::handleEvent (data=0x2aaaf549b718, event=100, this=0x2ab803790050)
          at ../../iocore/eventsystem/I_Continuation.h:153
      #10 Http2ClientSession::state_start_frame_read (this=0x2ab803790050, event=<optimized out>, edata=0x2aaaf549b718) at Http2ClientSession.cc:399
      #11 0x00002aaaaae67d6b in Continuation::handleEvent (data=0x2aaaf549b718, event=100, this=<optimized out>)
          at ../../iocore/eventsystem/I_Continuation.h:153
      #12 read_signal_and_update (vc=0x2aaaf549b600, vc@entry=0x1, event=event@entry=100) at UnixNetVConnection.cc:153
      #13 UnixNetVConnection::readSignalAndUpdate (this=this@entry=0x2aaaf549b600, event=event@entry=100) at UnixNetVConnection.cc:1036
      #14 0x00002aaaaae47633 in SSLNetVConnection::net_read_io (this=0x2aaaf549b600, nh=0x2aaab250acc0, lthread=0x2aaab2507000) at SSLNetVConnection.cc:595
      #15 0x00002aaaaae554cc in NetHandler::mainNetEvent (this=0x2aaab250acc0, event=<optimized out>, e=<optimized out>) at UnixNet.cc:513
      #16 0x00002aaaaae8d226 in Continuation::handleEvent (data=0x2aaab0bfa640, event=5, this=<optimized out>) at I_Continuation.h:153
      #17 EThread::process_event (calling_code=5, e=0x2aaab0bfa640, this=0x2aaab2507000) at UnixEThread.cc:148
      #18 EThread::execute (this=0x2aaab2507000) at UnixEThread.cc:275
      #19 0x00002aaaaae8c026 in spawn_thread_internal (a=0x2aaab0b25be0) at Thread.cc:86
      #20 0x00002aaaad6b3aa1 in start_thread (arg=0x2aaab3e05700) at pthread_create.c:301
      #21 0x00002aaaae8bc93d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115
      

      Attachments

        Issue Links

          Activity

            People

              masaori Masaori Koshiba
              zwoop Leif Hedstrom
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1.5h
                  1.5h