TS-4833: Check stream is not closed when restart it